--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "preLaunchTask":"${defaultBuildTask}",
+            //"preLaunchTask":"${defaultBuildTask}",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
