--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,12 @@
             "request": "launch",
             "program": "${workspaceFolder}/main",
             
-
-            
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            
+            //"cwd": "${workspaceFolder}/calc_stosszahl/k_eq_1/lower_ball",
+            "cwd": "${workspaceFolder}/",
+            //"cwd": "${workspaceFolder}/calc_stosszahl/k_eq_05",
+            //"cwd": "${workspaceFolder}",
             
             "environment": [],
             "externalConsole": false,
